frontend/ingress.yaml
apiVersion: extensions/v1beta1  
kind: Ingress  
metadata:  
  name: react-app
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: cdc.kotara.com
    http:
      paths:
      - path: /app
        backend:
          serviceName: frontend
          servicePort: 80
  tls:
  - hosts:
    - cdc.kotara.com
    secretName: cdc.kotara.com
